fix two divs being too wide

--- a/bbc.css
+++ b/bbc.css
@@ -190,7 +190,7 @@ input {
     background-color: #BB1918;
     padding-top: 8px;
     padding-left:16px;
-    min-width: 100%;
+    width: 1008px;
     height: 84px;
     float: left;
     border-top: 1px #e53434 solid;
@@ -847,7 +847,7 @@ hr {
 #news-services-div {
 
     background-color: #2F2F2F;
-    width: 100%;
+    width: 1013px;
     height: 87px;
     float: left;
     color: white;
